# qgp-light-ion

./: .chktexrc  .coverage  .gitignore  .latexmkrc  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DATA_MANIFEST.md  MODEL_CALIBRATION_REPORT.md  Makefile  PYTHON_PACKAGES_HEP_QGP.md  QGP_Light_Ion.md  QGP_Light_Ion_Whitepaper.md  README.md  TIER_ARCHITECTURE.md  pyproject.toml  qgp-light-ion.tex  references.bib  requirements-dev.txt
.githooks/: pre-push
.github/workflows/: ci.yml  latex.yml
.hypothesis/constants/: 08f5e83d8721bb33  0905255a1007ba23  0f49c5ad69c73298  1024220740f0e3a1  1bee5c0af9540f99  243ab9f2dce6f5b4  27de8f16cb73878a  2f36eb4baa7fb67e  321eab893ab46bea  3c5c56662a621baf  5e5a4adae0beb3a8  72d979c406154f4c  746d6f8bc621ed54  8b0f5db103c28943  8b91151f7ecfe566  8bc7cb060d638b77  b272df7f8e0c18c5  b9537537640eb36e  c51f6198da37a82d  c6462b0855a5f08a  d12beb82c78f5439  e03560125e8c646f  e04c1bacd8cdeb32  eea3acf1c605d739  eea7bc21079c1d8c  f20d7232df14badf  f975869c902262ff  fa3276e4d2a5b2b3
.hypothesis/examples/04e6b3400353b141/: 0423c9d1484844c0  05324c7feb2a842f  069da6bd6d4fa7c4  085b5908ea30e7c4  19af574545ddb85c  3c9fddb1561c55d7  457a41d7cba1b26f  81d9df3d458981cd  c62afcf343f920a9  efc8a26c1219d3bb
.hypothesis/examples/05324c7feb2a842f/: 21e8b531d2dc177a
.hypothesis/examples/069da6bd6d4fa7c4/: 62685a5378d6ee6f  bb68f26b7bf89934  c29fc5d42975a202  c97fd52bf9758520
.hypothesis/examples/085b5908ea30e7c4/: da583b7e95334a47
.hypothesis/examples/19af574545ddb85c/: cb72fbd035d4a992
.hypothesis/examples/81d9df3d458981cd/: cc4d69d1b1eb0950
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  AUDIT.md  BUILD_SYSTEM.md  COSMOLOGY_CONTEXT.md  FORMAL_METHODS.md  IMPLEMENTATION_SUMMARY.md  TECHNICAL_DEBT.md  reference_synthesis.md
experimental/: CHECKSUMS.sha256  FETCH_MANIFEST.toml
figures/: RAA_multisystem.tex  RAA_visualization.tex  accessible_colors.tex  accessible_typography.tex  bjorken_spacetime.tex  correlation_2d_ridge.tex  direct_photon_spectra.tex  energy_density_2d.tex  energy_loss_path.tex  femtoscopy_hbt.tex  flow_comprehensive.tex  flow_visualization.tex  geometry_visualization.tex  glauber_event_display.tex  knudsen_scaling.tex  nuclear_structure.tex  parameter_4d_scan.tex  qcd_phase_diagram.tex  spacetime_3d_evolution.tex  spectra_1d_pt.tex  strangeness_enhancement.tex  temperature_1d_evolution.tex
scripts/: bootstrap.sh  pdflatex-wrapper.sh
src/: __init__.py  compare_model_vs_experiment.py  generate_bjorken_hyperbolas.py  generate_comprehensive_data.py  generate_energy_density.py  generate_figure_curves.py  generate_hbt_data.py  generate_multidimensional_data.py  generate_photon_data.py  generate_plot_data.py  generate_qcd_phase_diagram.py  io_utils.py  qgp_physics.py
src/cosmology/: __init__.py  dark_energy.py  generate.py  reionization_bubble.py  reionization_fronts.py
src/gpu/: __init__.py
src/phase_diagram/: __init__.py  critical_point.py  crossover.py  first_order.py  freeze_out.py  params.py  trajectories.py
src/qgp/: __init__.py  constants.py  generate.py  generate_bjorken_hyperbolas.py  generate_energy_density.py  generate_figure_curves.py  generate_hbt_data.py  generate_multidimensional_data.py  generate_photon_data.py  generate_qcd_phase_diagram.py  jet_quenching_bayesian.py  physics.py  strangeness_suppression.py
src/qgp/phase_diagram/: __init__.py  critical_point.py  params.py
src/shared/: __init__.py  interpolation.py  mcmc.py
src/tools/: __init__.py  fetch_experimental_data.py
tests/: conftest.py  test_constants.py  test_data_generation.py  test_io_utils.py  test_phase_diagram.py  test_qgp_physics.py
tests/test_cosmology/: test_dark_energy.py  test_generate.py  test_reionization_bubble.py  test_reionization_fronts.py
tests/test_gpu/: test_gpu_acceleration.py
tests/test_qgp/: test_constants.py  test_io_utils.py  test_jet_quenching_bayesian.py  test_phase_diagram.py  test_physics_properties.py  test_qgp_physics.py  test_strangeness_suppression.py
tests/test_shared/: __init__.py  test_interpolation.py  test_mcmc.py
tests/test_tools/: test_fetch_experimental.py
