# =============================================================================
# pyproject.toml - QGP Light-Ion Project
# =============================================================================
# Python tooling configuration for data generation and analysis scripts

[project]
name = "qgp-light-ion"
version = "1.0.0"
description = "Data generation for QGP light-ion collision physics visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14",
]

# =============================================================================
# Ruff - Fast Python Linter
# =============================================================================
# Documentation: https://docs.astral.sh/ruff/

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

# Exclude generated/cached files
exclude = [
    "__pycache__",
    "*.egg-info",
    ".git",
    "build",
    "data",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "NPY",    # NumPy-specific rules
]

ignore = [
    # Allow print statements in data generation scripts
    "T201",   # print found

    # Allow magic values in physics calculations
    # (physical constants are well-documented in comments)
    "PLR2004",

    # Allow long lines in data tables and physics formulas
    "E501",

    # Allow star imports in physics modules
    # (common pattern: from qgp_physics import *)
    "F405",
    "F403",

    # Allow lambda expressions (common in physics calculations)
    "E731",

    # NumPy legacy random API (np.random.seed, etc.) - fine for reproducibility
    "NPY002",

    # NumPy 2.0 deprecations (np.trapz -> trapezoid) - not urgent
    "NPY201",

    # Module-level import after sys.path modification (needed for local imports)
    "E402",

    # zip() without strict= (Python 3.10+, optional safety check)
    "B905",
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
# Tests can have assertions and unused variables
"tests/*.py" = ["S101", "F841"]
# Main scripts can be executable
"src/generate_*.py" = ["T201"]  # Allow print in generators
"src/compare_*.py" = ["T201"]   # Allow print in comparison scripts

[tool.ruff.lint.isort]
known-first-party = ["qgp_physics"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# pytest (if tests grow)
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# =============================================================================
# Coverage (optional)
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
