# =============================================================================
# pyproject.toml - QGP Light-Ion Project
# =============================================================================
# Python tooling configuration for data generation and analysis scripts

[project]
name = "qgp-light-ion"
version = "1.0.0"
description = "Data generation for QGP light-ion collision physics visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Deirikr Jaiusadastra Afrauthihinngreygaard"}
]
keywords = ["QGP", "heavy-ion", "physics", "LHC", "ALICE", "CMS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24,<3.0",
    "scipy>=1.10",
    "matplotlib>=3.7",

    # Machine learning / advanced numerics
    "scikit-learn>=1.3",

    # JIT compilation for performance-critical physics
    "numba>=0.58",

    # Additional numerical tools
    "sympy>=1.12",              # Symbolic math for analytical cross-checks
    "pandas>=2.0",              # Data manipulation for experimental comparisons
    "h5py>=3.9",                # HDF5 for large dataset I/O

    # Physics-specific
    "uncertainties>=3.1",       # Error propagation
    "pint>=0.22",               # Unit handling

    # Visualization enhancements
    "seaborn>=0.12",            # Statistical visualization
    "plotly>=5.15",             # Interactive plots (optional export)
]

[project.optional-dependencies]
# Development tools
dev = [
    "ruff>=0.8",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.5",
]

# Documentation
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

# Jupyter notebook support
notebook = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipywidgets>=8.1",
]

# macOS-specific optimizations (Apple Silicon / Accelerate framework)
# These use Apple's native BLAS/LAPACK and ML frameworks
macos = [
    "pyobjc-framework-Accelerate>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Metal>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-MetalPerformanceShaders>=10.0; sys_platform == 'darwin'",
]

# Apple Silicon ML framework (M1/M2/M3)
apple-silicon = [
    "mlx>=0.5; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-data>=0.0.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

# HEP-specific tools (optional, for advanced users)
hep = [
    "uproot>=5.0",              # ROOT file I/O without ROOT
    "awkward>=2.4",             # Jagged array operations
    "vector>=1.1",              # Lorentz vectors
    "hist>=2.7",                # Histogram operations
    "particle>=0.23",           # PDG particle data
    "hepunits>=2.3",            # HEP unit conversions
]

# Full installation with all optional dependencies
all = [
    "qgp-light-ion[dev,docs,notebook,macos,hep]",
]

[project.urls]
Homepage = "https://github.com/Oichkatzelesfrettschen/qgp-light-ion"
Repository = "https://github.com/Oichkatzelesfrettschen/qgp-light-ion.git"
Issues = "https://github.com/Oichkatzelesfrettschen/qgp-light-ion/issues"

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# =============================================================================
# Ruff - Fast Python Linter
# =============================================================================
# Documentation: https://docs.astral.sh/ruff/

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

# Exclude generated/cached files
exclude = [
    "__pycache__",
    "*.egg-info",
    ".git",
    "build",
    "data",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]

ignore = [
    # Allow print statements in data generation scripts
    "T201",   # print found

    # Allow magic values in physics calculations
    # (physical constants are well-documented in comments)
    "PLR2004",

    # Allow long lines in data tables and physics formulas
    "E501",

    # Allow star imports in physics modules
    # (common pattern: from qgp_physics import *)
    "F405",
    "F403",

    # Allow lambda expressions (common in physics calculations)
    "E731",

    # NumPy legacy random API (np.random.seed, etc.) - fine for reproducibility
    "NPY002",

    # NumPy 2.0 deprecations (np.trapz -> trapezoid) - not urgent
    "NPY201",

    # Module-level import after sys.path modification (needed for local imports)
    "E402",

    # zip() without strict= (Python 3.10+, optional safety check)
    "B905",

    # Allow Unicode characters in strings/comments/docstrings
    # Physics notation uses Greek letters (σ, ρ, γ, τ, η, ε, etc.)
    # and typographic characters (×, –, ≈, ∝, etc.) intentionally
    "RUF001",  # Ambiguous unicode in strings
    "RUF002",  # Ambiguous unicode in docstrings
    "RUF003",  # Ambiguous unicode in comments
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
# Tests can have assertions and unused variables
"tests/*.py" = ["S101", "F841"]
# Main scripts can be executable
"src/generate_*.py" = ["T201"]  # Allow print in generators
"src/compare_*.py" = ["T201"]   # Allow print in comparison scripts

[tool.ruff.lint.isort]
known-first-party = ["qgp_physics"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Mypy - Static Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing: allow untyped for now
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "numba.*",
    "sklearn.*",
    "pandas.*",
    "h5py.*",
    "sympy.*",
    "uncertainties.*",
    "pint.*",
    "seaborn.*",
    "plotly.*",
    "uproot.*",
    "awkward.*",
    "vector.*",
    "hist.*",
    "particle.*",
    "hepunits.*",
]
ignore_missing_imports = true

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Pylint
# =============================================================================
[tool.pylint.main]
jobs = 0  # Use all CPUs
suggestion-mode = true
fail-under = 7.0

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (handled by interrogate)
    "C0103",  # invalid-name (physics variables often single letters)
    "R0913",  # too-many-arguments (physics functions need many params)
    "R0914",  # too-many-locals (complex calculations)
    "W0212",  # protected-access (needed for testing)
    "C0415",  # import-outside-toplevel (lazy imports for performance)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60

# =============================================================================
# Bandit - Security Scanner
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "build", "data", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used (needed in physics validation)

# =============================================================================
# Interrogate - Docstring Coverage
# =============================================================================
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
fail-under = 60
verbose = 1
quiet = false
color = true
exclude = ["build", "data", ".venv", "venv"]

# =============================================================================
# Radon - Complexity Metrics
# =============================================================================
# Configuration via CLI arguments in CI
# Target: Cyclomatic Complexity < 15 (Grade B or better)
#         Maintainability Index > 20 (Grade B or better)

# =============================================================================
# Vulture - Dead Code Detection
# =============================================================================
# Configuration via CLI arguments
# Target: min-confidence 80

# =============================================================================
# Black - Code Formatter (backup to ruff)
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | data
  | __pycache__
)/
'''

# =============================================================================
# isort - Import Sorting (integrated in ruff)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["build/*", "data/*", ".venv/*", "venv/*"]

# =============================================================================
# Pydocstyle - Docstring Style Checker
# =============================================================================
[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]  # Missing docstring in public module/package

# =============================================================================
# Commitizen - Conventional Commits
# =============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
